ibm api 통신과 tweet 유저 단위로 크롤링, textarea로 유저 아이디 얻어오기

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+
 <form action="" id="form_id" method="post">
-	<textarea  name="txt" id="textInput" cols="100" rows="10"></textarea>
+    SNS 아이디를 입력해 주세요
+	<textarea  name="txt" id="textInput" cols="20" rows="1"></textarea>
 	<input type="button"  name="submit_id" id="btn" value="전송" onclick="postFunc()"/>
 
 </form>
